[tool.poetry]
name = "assignment2-2024-gangineers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
tqdm = "^4.66.5"
torch = "^2.5.0"
torchvision = "^0.20.0"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88  

[tool.black]
line-length = 88  
skip-string-normalization = false  
